@@ -9,6 +9,7 @@ Snapshot new
  * Make ruby's conditional support.
  * Implement WeakObject for some speed up.
  * Add MS VC compilation.
+ * Add removing unused functions.
 
 Version 0.0.0.1 2010-08-24
  * Fix bugs in allocation.
